# S.H-Sales

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
data/curated/: cities.parquet  customer_types.parquet  customers.parquet  product_types.parquet  products.parquet  sale_types.parquet
notebooks/: 01_data_understanding.ipynb  02_cleaning.ipynb  03_data_modeling.ipynb  04_etl_to_database.ipynb
