[project]
name = "sh-sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.2",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.6",
]
